tests/testerina-integration-test/src/test/resources/command-outputs/unix/InvalidFunctionMockingTestCase-testMockingNonExistingFunction.txt
Compiling source
	intg_tests/non_existent_function_mock:0.1.0
ERROR [tests/test.bal:(3:1,3:38)] could not find function 'intAdd' in module 'intg_tests/non_existent_function_mock:0.1.0'
  |
3 | @test:Mock { functionName: "intAdd" }
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: compilation contains errors